--- a/package.json
+++ b/package.json
@@ -13,21 +13,23 @@
   "dependencies": {
     "@angular/animations": "~12.2.0",
     "@angular/cdk": "^12.2.5",
+    "@angular/cli": "~12.2.4",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
+    "@angular/compiler-cli": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/fire": "^6.1.5",
-    "@angular/cli": "~12.2.4",
-    "@angular/compiler-cli": "~12.2.0",
     "@angular/forms": "~12.2.0",
     "@angular/material": "^12.2.5",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "express": "^4.17.1",
     "firebase": "^7.0 || ^8.0",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
-    "typescript": "~4.3.5",
     "tslib": "^2.3.0",
+    "typescript": "~4.3.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
